EM-267 Booking search results grid view large text    - Added word wrap to ancillary text and offender name    - Fixed collapsing height/css

--- a/app/components/Bookings/Grid/index.scss
+++ b/app/components/Bookings/Grid/index.scss
@@ -39,9 +39,7 @@ $person-details-background-colour: #F2F2F2;
           padding: 1em 0.5em;
 
           .person-name {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            word-wrap: break-word;
           }
 
           .ancillary-text {
